Change small details in text, remove spacing bug, change bluetxt

--- a/imports/ui/components/reader.css
+++ b/imports/ui/components/reader.css
@@ -300,7 +300,7 @@ ul::selection {
 }
 
 .blueTxt{
-	color: blue !important;
+	color: rgba(0,255,0,1) !important;
 }
 
 .dice {
